Implemented working Value Strategy module

--- a/starter_files/002_quantitative_momentum_strategy.ipynb
+++ b/starter_files/002_quantitative_momentum_strategy.ipynb
@@ -1891,9 +1891,7 @@
     "            invalid_portfolio_size = False\n",
     "        except ValueError:\n",
     "            print(\"Input must be a valid number\")\n",
-    "    return val\n",
-    "\n",
-    "portfolioSize = getPortfolioSize()\n"
+    "    return val"
    ]
   },
   {
